[package]
name = "cargo-licensepull"
version = "0.1.1"
authors = ["mhnghfv"]
edition = "2018"
license = "0BSD"
description = "Cargo subcommand to extracts the content of LICENSE files of dependencies"
readme = "README.md"
repository = "https://github.com/mhnghfv/cargo-licensepull"
categories = ["development-tools::cargo-plugins"]

[dependencies]
cargo_metadata = "0.13.1"
regex = "1.4.5"
